// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on Android the button with type cancel 1`] = `
<DummyTouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 4,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#9b9b9b",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</DummyTouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type confirm 1`] = `
<DummyTouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 4,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#008edf",
        },
        null,
        undefined,
      ]
    }
  />
</DummyTouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type normal 1`] = `
<DummyTouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 4,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#008edf",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</DummyTouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type orange 1`] = `
<DummyTouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 4,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#f7861ce6",
        },
        null,
        undefined,
      ]
    }
  />
</DummyTouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on iOS the button with type cancel 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 4,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#9b9b9b",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "bold",
        "textAlign": "center",
      },
      Object {
        "color": "#9b9b9b",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type confirm 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 4,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#008edf",
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "bold",
        "textAlign": "center",
      },
      Object {
        "color": "#FFFFFF",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type normal 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 4,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#008edf",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "bold",
        "textAlign": "center",
      },
      Object {
        "color": "#008edf",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type orange 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 4,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#f7861ce6",
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontSize": 14,
        "fontWeight": "bold",
        "textAlign": "center",
      },
      Object {
        "color": "#FFFFFF",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;
